--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://alostad1994_db_user:OJyAtElUCjGOxbAX@cluster0.qnmc1hu.mongodb.net/Sanad
 PORT=8000
+
+JWT_SECRET=lmr9699lmr9699lmr9699
+JWT_EXPIRES_IN=""
