--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "sanad-api",
+  "name": "sanad-be",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "description": "",
+  "main": "app.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.ts",
     "seed": "ts-node src/seed/seed.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
@@ -28,7 +32,6 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.2.0",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
 }
